"""Pairs trading strategy"""

from src.models.strategies.base_strategy import BaseStrategy
import pandas as pd
import numpy as np
from statsmodels.tsa.stattools import coint


class PairsTradingStrategy(BaseStrategy):
    """Pairs trading strategy implementation."""

    def __init__(self, data, symbol1, symbol2):
        super().__init__(data)
        self.symbol1 = symbol1
        self.symbol2 = symbol2
        self.spread = self.calculate_spread()
        self.entry_threshold = 1.0
        self.exit_threshold = 0.5

    def calculate_spread(self):
        """Calculate and return the spread between two cointegrated stocks."""
        return self.data[self.symbol1] - self.data[self.symbol2]

    def generate_signals(self):
        """Implement mean-reversion strategy for a given pair."""
        mean = self.spread.mean()
        std = self.spread.std()

        longs = self.spread < mean - self.entry_threshold * std
        shorts = self.spread > mean + self.entry_threshold * std
        exits = abs(self.spread - mean) < self.exit_threshold * std

        return longs, shorts, exits

    def calculate_metrics(self):
        """Additional metrics calculation specific to pairs trading could be added here."""

    def execute_trades(self):
        """Execution logic based on generated signals."""
